--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,16 @@ services:
             - .:/app:rw
         environment:
             - APP_ENV=dev
+        depends_on:
+            - database
+
+    database:
+       image: postgres:${POSTGRES_VERSION:-16}-alpine
+       environment:
+          POSTGRES_DB: dev
+          POSTGRES_PASSWORD: dev
+          POSTGRES_USER: dev
+       ports:
+           - 5433:5432
+       volumes:
+         - ./data/db/postgres:/var/lib/postgresql
