--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,13 @@
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.2",
+        "symfony/browser-kit": "6.4.*",
         "symfony/console": "6.4.*",
         "symfony/dotenv": "6.4.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.4.*",
+        "symfony/http-kernel": "6.4.*",
+        "symfony/phpunit-bridge": "^7.1",
         "symfony/property-access": "6.4.*",
         "symfony/runtime": "6.4.*",
         "symfony/serializer": "6.4.*",
@@ -72,6 +75,10 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.6",
+        "friendsofphp/php-cs-fixer": "^3.59",
+        "phpunit/phpunit": "^11.2",
+        "symfony/css-selector": "6.4.*",
         "symfony/maker-bundle": "^1.60"
     }
 }
